<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/dark">
	<LinearLayout 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:background="@drawable/dark">

		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/dark" >
		    <Button
		    android:id="@+id/button_start"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_start"
		    android:textColor="@drawable/white"
		    android:textSize="18sp" />
		    
		    <Button
		        android:id="@+id/button_finish"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/button_finish"
		        android:textColor="@drawable/white"
		        android:textSize="18sp" />

		</RelativeLayout>

	    <Button 
	        android:id="@+id/button_route" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:text="@string/button_route"
	        android:textColor="@drawable/white"
	        android:layout_marginLeft="5dp"
	        android:textSize="18sp" />
	    
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/dark" >
		    
	    <Button
	        android:id="@+id/button_restart"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_restart"
	        android:textColor="@drawable/white"
	        android:layout_marginLeft="5dp"
	        android:textSize="18sp" />

	    <Button
	        android:id="@+id/button_cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:textColor="@drawable/white"
	        android:text="CANCEL"
	        android:textSize="18sp" />

	    
	    </RelativeLayout>
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/dark" >

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	    
		    <TextView
		        android:id="@+id/showgeo1"
		        android:layout_width="180dp"
		        android:layout_height="wrap_content"
		        android:textColor="@drawable/white"
		        android:textSize="17sp" />

		    <TextView
		        android:id="@+id/showgeo3"
		        android:layout_width="180dp"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textColor="@drawable/white"
		         android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/showgeo1"
		        android:textSize="17sp" />

	    </RelativeLayout>

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	    
		    <TextView
		        android:id="@+id/showgeo2"
		        android:layout_width="180dp"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textColor="@drawable/white"
		        android:textSize="17sp" />
		    
		    <TextView
		        android:id="@+id/showgeo4"
		        android:layout_width="180dp"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textColor="@drawable/white"
		         android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/showgeo2"
		        android:textSize="17sp" />

	    </RelativeLayout>
	    
	     <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
		    
	       <TextView
	        android:id="@+id/showgeo0"
	        android:layout_width="180dp"
	        android:layout_height="wrap_content"
	        android:text=""
	        android:textColor="@drawable/white"
	        android:textSize="17sp" />
	       
	        <TextView
		        android:id="@+id/showgoe02"
		        android:layout_width="180dp"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textColor="@drawable/white"
		         android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/showgeo0"
		        android:textSize="17sp" />
	       
	     </RelativeLayout>

	</LinearLayout>
    <fragment
        android:id="@+id/map_fragment"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        class="com.google.android.gms.maps.SupportMapFragment" />

</LinearLayout>


